<resources>
    <string name="app_name">MEMER</string>
    <string name="message">Message</string>
    <string name="username">Username</string>
    <string name="_8942">⋮</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_a_memer">Already a Memer</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username_or_email_id">Enter Username or Email-id</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="start_your_meme_journey">Start your Meme Journey</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="cancel">Cancel</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_in_with_fb">Sign In With Facebook</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="post">Post</string>
    <string name="name_of_user">name of user</string>
    <string name="count_followers">#Followers</string>
    <string name="followers">Followers</string>
    <string name="count_following">#Following</string>
    <string name="following">Following</string>
    <string name="count_post">#Post</string>
    <string name="add_post">Add Post</string>
    <string name="confirm">Confirm</string>
    <string name="remove_profile_picture">Remove Profile Picture</string>
    <string name="notifications">Notifications</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="time">time</string>
    <string name="camera">Camera</string>
    <string name="done">Done</string>
    <string name="add_description">Add Description</string>
    <string name="show_replies">Show Replies</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="replying_to_username">Replying To Username</string>
    <string name="follow_user">Follow</string>
    <string name="this_account_is_private">This Account Is Private</string>
    <string name="on_boarding_done">com.example.memer.OnBoardingDone</string>
    <string name="editing_comment">Editing Comment</string>
    <string name="lorem_ipsum">"Lorem Ipsum dolor sit amet, consectetur </string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy Link</string>
    <string name="edit_post">Edit Post</string>
    <string name="report">Report</string>
    <string name="your_post">Your Post</string>
    <string name="todo">TODO</string>
    <string name="see_all_comments">See All Comments</string>
    <string name="dislikes">DisLikes</string>
    <string name="set_caption">Set Caption</string>
    <string name="post_shared_by_username">Post Shared By Username</string>
</resources>