<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentHomePage"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/fragmentSearch"
        android:title="@string/search"
        android:icon="@drawable/search_icon"/>
    <item
        android:id="@+id/navigationAddPost"
        android:title="@string/add"
        android:icon="@drawable/add_icon"/>

    <item
        android:id="@+id/fragmentUserActivity"
        android:title="@string/notifications"
        android:icon="@drawable/notification_icon"/>

    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/default_avatar"
        android:title="@string/profile" />

</menu>