<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/deletePost"
        android:icon="@drawable/message_icon"
        android:title="@string/delete"
        app:showAsAction= "never" />

    <item
        android:id="@+id/savePost"
        android:icon="@drawable/message_icon"
        android:title="@string/archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/sharePost"
        android:icon="@drawable/message_icon"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/copyLinkPost"
        android:icon="@drawable/message_icon"
        android:title="@string/copy_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/editPost"
        android:icon="@drawable/message_icon"
        android:title="@string/edit_post"
        app:showAsAction="never" />



</menu>