<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/commentRootRelativeLayout">

    <ImageView
        android:id="@+id/userAvatarComment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/usernameComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/userAvatarComment"/>

    <TextView
        android:id="@+id/userCommentContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/comments"
        android:textColor="@color/black"
        android:layout_toStartOf="@id/likeComment"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_below="@id/usernameComment"
        android:layout_toEndOf="@id/userAvatarComment" />

    <TextView
        android:id="@+id/replyComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCommentContent"
        android:layout_toEndOf="@id/userAvatarComment"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reply"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/timeComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCommentContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/replyComment"
        android:text="@string/time"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/likeComment"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/like_icon_border"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>


